REGRESSION(r94274): cloned text input loses value https://bugs.webkit.org/show_bug.cgi?id=69095

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by copyNonAttributeProperties not updating inner element text after copying
m_valueIfDirty. Fixed the bug by calling updateInnerTextValue.

Test: fast/forms/clone-input-with-dirty-value.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::copyNonAttributeProperties):

LayoutTests:

Added a regression test that clones an input element with a dirty value.
The cloned input element should have the edited value.

* fast/forms/clone-input-with-dirty-value-expected.txt: Added.
* fast/forms/clone-input-with-dirty-value.html: Added.


Canonical link: https://commits.webkit.org/85314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96552 268f45cc-cd09-0410-ab3c-d52691b4dbfc